feat: api version (#290)
Refs: #291
